--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "css": "postcss -c postcss.config.json"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,14 @@
   "homepage": "https://github.com/jessicace/jessica.codes#readme",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "postcss-cli": "^2.5.2"
+    "css-loader": "^0.23.1",
+    "postcss-cli": "^2.5.2",
+    "postcss-loader": "^0.9.1",
+    "postcss-reporter": "^1.3.3",
+    "style-loader": "^0.13.1",
+    "stylelint": "^6.7.1",
+    "stylelint-webpack-plugin": "^0.2.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   }
 }
