--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
   "homepage": "https://github.com/jessicace/jessica.codes#readme",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "css-loader": "^0.23.1",
+    "colorguard": "^1.2.0",
+    "cssnano-cli": "^1.0.4",
     "postcss-cli": "^2.5.2",
-    "postcss-loader": "^0.9.1",
+    "postcss-cssnext": "^2.6.0",
+    "postcss-font-magician": "^1.4.0",
     "postcss-reporter": "^1.3.3",
-    "style-loader": "^0.13.1",
-    "stylelint": "^6.7.1",
-    "stylelint-webpack-plugin": "^0.2.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "stylelint": "^6.7.1"
   }
 }
